# WordSimilarity

./: .gitignore  CMakeLists.txt  Makefile  README.md  compiling_error.txt  enviroment.txt  mathlib.h  sim2  sim3  similarity.cpp  similarity.h  similarity_2.h  similarity_2_3.h  similarity_v2.cpp  similarity_v3.cpp  syn_dic  syn_dic.cpp  syn_dic.h
results/: combined_zh.csv  combined_zh_cilin.csv  combined_zh_syn.csv  combined_zh_v1.csv  combined_zh_v2.csv  result.xls
test/: sim_test_1.sh  sim_test_2.sh  sim_test_miller_origin.sh  sim_test_miller_v2.sh  sim_test_miller_v3.sh
